// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListRow /> List Row unmounts correctly 1`] = `null`;

exports[`<ListRow /> List Row unmounts correctly 2`] = `null`;

exports[`<ListRow /> renders List Row with colored date correctly 1`] = `
<div
  className="ixeVCK"
  onClick={[Function]}
  onModalClose={[Function]}
  onRowCollapse={[Function]}
>
  <div
    className="row__wrapper row__wrapper--collapsed bdAxFg"
    onCloseRequest={[Function]}
  >
    <div
      className="list__container eFAfGr"
    >
      <button
        aria-expanded={false}
        aria-label="Expand Row"
        className="button--expand-or-collapse button--collapsed jxGugM"
        data-index={0}
        onClick={[Function]}
        role="button"
        size={45}
        type="button"
      >
        <svg
          fill="#1f262d"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="See Tickets"
        className="link__wrapper bMtiBb"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="date__wrapper dIzoqV"
        >
          <div
            className="text text--accent text--heliotrope text--primary date--text dFzxVa"
            disabled={false}
            size={
              Object {
                "large": "kilo",
                "medium": "kilo",
                "small": "hecto",
              }
            }
          >
            apr 23
          </div>
          <div
            className="text text--dark text--secondary day-time--text jjEscd kzWFvt"
            disabled={false}
            size={
              Object {
                "large": "hecto",
                "medium": "hecto",
                "small": "hecto",
              }
            }
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="row__content jliziJ"
        >
          <div
            className="column__mobile-only hwQSiY"
          >
            <div
              className="text text--dark text--primary list-row--title bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="text text--dark text--secondary list-row--subtitle jjEscd kzWFvt"
              disabled={false}
              size={
                Object {
                  "large": "hecto",
                  "medium": "hecto",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row--title column__content--collapsed iRwVbZ"
          >
            <div
              className="text text--dark text--primary bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="column__content iRwVbZ"
          >
            <div
              className="text text--dark text--primary subtitle list-row--subtitle subtitle--active subtitle--collapsed bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
            <div
              className="text text--dark text--primary subtitle subtitle--expanded subtitle--hidden bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
        </div>
        <div
          className="khBeGP"
        >
          <span
            aria-label="See Tickets"
            className="TAvlk"
            role="button"
            size="regular"
            width="102px"
          >
            See Tickets
          </span>
        </div>
      </a>
      <div
        className="fPfNCK"
      >
        <button
          aria-label="More Info"
          className="button--more-info icon-button--last bIqKEx"
          data-index={0}
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            fill="rgba(38, 38, 38, 0.6)"
            height={22}
            viewBox="0 0 5 21"
            width={5.5}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--collapsed hkONOE"
    />
  </div>
</div>
`;

exports[`<ListRow /> renders List Row with label correctly 1`] = `
<div
  className="ixeVCK"
  onClick={[Function]}
  onModalClose={[Function]}
  onRowCollapse={[Function]}
>
  <div
    className="row__wrapper row__wrapper--collapsed bdAxFg"
    onCloseRequest={[Function]}
  >
    <div
      className="gtrsDp"
    >
      <div
        className="eYbbVw"
      >
        <div
          className="row__label row__label--mobile dwkgmN"
          data-index={0}
        >
          <div
            className="text text--accent text-- text--primary iXtlNF kCFpc"
            disabled={false}
            size={
              Object {
                "large": "hecto",
                "medium": "hecto",
                "small": "hecto",
              }
            }
          >
            On sale: MON • AUG 27 • 10 AM
          </div>
        </div>
        <div
          className="row__label row__label--desktop row__label--active kElDAq"
          data-index={0}
        >
          <div
            className="text text--accent text-- text--primary iXtlNF kCFpc"
            disabled={false}
            size={
              Object {
                "large": "hecto",
                "medium": "hecto",
                "small": "hecto",
              }
            }
          >
            On sale: MON • AUG 27 • 10 AM
          </div>
        </div>
        <div
          className="row__label row__label--expanded row__label--desktop row__label--hidden kElDAq"
          data-index={0}
        >
          <div
            className="text text--accent text-- text--primary iXtlNF kCFpc"
            disabled={false}
            size={
              Object {
                "large": "hecto",
                "medium": "hecto",
                "small": "hecto",
              }
            }
          >
            On sale: MON • AUG 27 • 10 AM
          </div>
        </div>
      </div>
    </div>
    <div
      className="list__container bmaMQK"
    >
      <button
        aria-expanded={false}
        aria-label="Expand Row"
        className="button--expand-or-collapse button--collapsed jxGugM"
        data-index={0}
        onClick={[Function]}
        role="button"
        size={45}
        type="button"
      >
        <svg
          fill="#1f262d"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="See Tickets"
        className="link__wrapper bMtiBb"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="date__wrapper dIzoqV"
        >
          <div
            className="text text--dark text--primary date--text cJvdYQ"
            disabled={false}
            size={
              Object {
                "large": "kilo",
                "medium": "kilo",
                "small": "hecto",
              }
            }
          >
            apr 23
          </div>
          <div
            className="text text--dark text--secondary day-time--text jjEscd kzWFvt"
            disabled={false}
            size={
              Object {
                "large": "hecto",
                "medium": "hecto",
                "small": "hecto",
              }
            }
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="row__content jliziJ"
        >
          <div
            className="column__mobile-only hwQSiY"
          >
            <div
              className="text text--dark text--primary list-row--title bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="text text--dark text--secondary list-row--subtitle jjEscd kzWFvt"
              disabled={false}
              size={
                Object {
                  "large": "hecto",
                  "medium": "hecto",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row--title column__content--collapsed iRwVbZ"
          >
            <div
              className="text text--dark text--primary bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="column__content iRwVbZ"
          >
            <div
              className="text text--dark text--primary subtitle list-row--subtitle subtitle--active subtitle--collapsed bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
            <div
              className="text text--dark text--primary subtitle subtitle--expanded subtitle--hidden bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
        </div>
        <div
          className="khBeGP"
        >
          <span
            aria-label="See Tickets"
            className="TAvlk"
            role="button"
            size="regular"
            width="102px"
          >
            See Tickets
          </span>
        </div>
      </a>
      <div
        className="fPfNCK"
      >
        <button
          aria-label="More Info"
          className="button--more-info icon-button--last bIqKEx"
          data-index={0}
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            fill="rgba(38, 38, 38, 0.6)"
            height={22}
            viewBox="0 0 5 21"
            width={5.5}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--collapsed hkONOE"
    />
  </div>
</div>
`;

exports[`<ListRow /> renders List Row with link correctly 1`] = `
<div
  className="ixeVCK"
  onClick={[Function]}
  onModalClose={[Function]}
  onRowCollapse={[Function]}
>
  <div
    className="row__wrapper row__wrapper--collapsed bdAxFg"
    onCloseRequest={[Function]}
  >
    <div
      className="list__container chItLs"
    >
      <button
        aria-expanded={false}
        aria-label="Expand Row"
        className="button--expand-or-collapse button--collapsed jxGugM"
        data-index={0}
        onClick={[Function]}
        role="button"
        size={45}
        type="button"
      >
        <svg
          fill="#1f262d"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="See Tickets"
        className="link__wrapper bMtiBb"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="date__wrapper dIzoqV"
        >
          <div
            className="text text--dark text--primary date--text cJvdYQ"
            disabled={false}
            size={
              Object {
                "large": "kilo",
                "medium": "kilo",
                "small": "hecto",
              }
            }
          >
            apr 23
          </div>
          <div
            className="text text--dark text--secondary day-time--text jjEscd kzWFvt"
            disabled={false}
            size={
              Object {
                "large": "hecto",
                "medium": "hecto",
                "small": "hecto",
              }
            }
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="row__content jliziJ"
        >
          <div
            className="column__mobile-only hwQSiY"
          >
            <div
              className="text text--dark text--primary list-row--title bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="text text--dark text--secondary list-row--subtitle jjEscd kzWFvt"
              disabled={false}
              size={
                Object {
                  "large": "hecto",
                  "medium": "hecto",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row--title column__content--collapsed iRwVbZ"
          >
            <div
              className="text text--dark text--primary bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="column__content iRwVbZ"
          >
            <div
              className="text text--dark text--primary subtitle list-row--subtitle subtitle--active subtitle--collapsed bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
            <div
              className="text text--dark text--primary subtitle subtitle--expanded subtitle--hidden bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
        </div>
        <div
          className="khBeGP"
        >
          <span
            aria-label="See Tickets"
            className="TAvlk"
            role="button"
            size="regular"
            width="102px"
          >
            See Tickets
          </span>
          <div
            className="dFpiHg"
          >
            <div
              className="text text--dark text--secondary jjEscd foyaPB"
              disabled={false}
              size={
                Object {
                  "large": "uno",
                  "medium": "uno",
                  "small": "uno",
                }
              }
            >
              on Partner Site
            </div>
          </div>
        </div>
      </a>
      <div
        className="fPfNCK"
      >
        <button
          aria-label="More Info"
          className="button--more-info icon-button--last bIqKEx"
          data-index={0}
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            fill="rgba(38, 38, 38, 0.6)"
            height={22}
            viewBox="0 0 5 21"
            width={5.5}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="gSJHix"
    >
      <div
        className="jMKHiO"
      >
        <button
          className="link--row-options jVlmkc gJYhwf"
          data-index={0}
          href={null}
          onClick={[Function]}
          rel="_self"
          size={
            Object {
              "large": "hecto",
              "medium": "hecto",
              "small": "hecto",
            }
          }
          target=""
        >
          Ticket Options Available
        </button>
        <span
          className="link--row-options yTzPP ktVXkN"
          data-index={0}
          href=""
          onClick={null}
          rel="_self"
          size={
            Object {
              "large": "hecto",
              "medium": "hecto",
              "small": "hecto",
            }
          }
          target=""
        >
          Ticket Options Available
        </span>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--collapsed hkONOE"
    />
  </div>
</div>
`;

exports[`<ListRow /> renders List Row with styled button 1`] = `
<div
  className="ixeVCK"
  onClick={[Function]}
  onModalClose={[Function]}
  onRowCollapse={[Function]}
>
  <div
    className="row__wrapper row__wrapper--collapsed bdAxFg"
    onCloseRequest={[Function]}
  >
    <div
      className="list__container eFAfGr"
    >
      <button
        aria-expanded={false}
        aria-label="Expand Row"
        className="button--expand-or-collapse button--collapsed jxGugM"
        data-index={0}
        onClick={[Function]}
        role="button"
        size={45}
        type="button"
      >
        <svg
          fill="#1f262d"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="More Info"
        className="link__wrapper bMtiBb"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="date__wrapper dIzoqV"
        >
          <div
            className="text text--dark text--primary date--text cJvdYQ"
            disabled={false}
            size={
              Object {
                "large": "kilo",
                "medium": "kilo",
                "small": "hecto",
              }
            }
          >
            apr 23
          </div>
          <div
            className="text text--dark text--secondary day-time--text jjEscd kzWFvt"
            disabled={false}
            size={
              Object {
                "large": "hecto",
                "medium": "hecto",
                "small": "hecto",
              }
            }
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="row__content jliziJ"
        >
          <div
            className="column__mobile-only hwQSiY"
          >
            <div
              className="text text--dark text--primary list-row--title bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="text text--dark text--secondary list-row--subtitle jjEscd kzWFvt"
              disabled={false}
              size={
                Object {
                  "large": "hecto",
                  "medium": "hecto",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row--title column__content--collapsed iRwVbZ"
          >
            <div
              className="text text--dark text--primary bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="column__content iRwVbZ"
          >
            <div
              className="text text--dark text--primary subtitle list-row--subtitle subtitle--active subtitle--collapsed bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
            <div
              className="text text--dark text--primary subtitle subtitle--expanded subtitle--hidden bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
        </div>
        <div
          className="khBeGP"
        >
          <span
            aria-label="More Info"
            className="gMBrmr"
            role="button"
            size="regular"
            width="102px"
          >
            More Info
          </span>
        </div>
      </a>
      <div
        className="fPfNCK"
      >
        <button
          aria-label="More Info"
          className="button--more-info icon-button--last bIqKEx"
          data-index={0}
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            fill="rgba(38, 38, 38, 0.6)"
            height={22}
            viewBox="0 0 5 21"
            width={5.5}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--collapsed hkONOE"
    />
  </div>
</div>
`;

exports[`<ListRow /> renders List Row with title correctly when expanded 1`] = `
<div
  className="ixeVCK"
  onClick={[Function]}
  onModalClose={[Function]}
  onRowCollapse={[Function]}
>
  <div
    className="row__wrapper row__wrapper--expanded bdAxFg"
    onCloseRequest={[Function]}
  >
    <div
      className="list__container eFAfGr"
    >
      <button
        aria-expanded={true}
        aria-label="Collapse Row"
        className="button--expand-or-collapse button--expanded jxGugM"
        data-index={0}
        onClick={[Function]}
        role="button"
        size={45}
        type="button"
      >
        <svg
          fill="#1f262d"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="See Tickets"
        className="link__wrapper bMtiBb"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="date__wrapper dIzoqV"
        >
          <div
            className="text text--dark text--primary date--text cJvdYQ"
            disabled={false}
            size={
              Object {
                "large": "kilo",
                "medium": "kilo",
                "small": "hecto",
              }
            }
          >
            apr 23
          </div>
          <div
            className="text text--dark text--secondary day-time--text jjEscd kzWFvt"
            disabled={false}
            size={
              Object {
                "large": "hecto",
                "medium": "hecto",
                "small": "hecto",
              }
            }
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="row__content jliziJ"
        >
          <div
            className="column__mobile-only hwQSiY"
          >
            <div
              className="text text--dark text--primary list-row--title bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="text text--dark text--secondary list-row--subtitle jjEscd kzWFvt"
              disabled={false}
              size={
                Object {
                  "large": "hecto",
                  "medium": "hecto",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row--title column__content--expanded iRwVbZ"
          >
            <div
              className="text text--dark text--primary bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="column__content iRwVbZ"
          >
            <div
              className="text text--dark text--primary subtitle list-row--subtitle subtitle--hidden subtitle--collapsed bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
            <div
              className="text text--dark text--primary subtitle subtitle--expanded subtitle--active bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
          </div>
        </div>
        <div
          className="khBeGP"
        >
          <span
            aria-label="See Tickets"
            className="TAvlk"
            role="button"
            size="regular"
            width="102px"
          >
            See Tickets
          </span>
        </div>
      </a>
      <div
        className="fPfNCK"
      >
        <button
          aria-label="More Info"
          className="button--more-info icon-button--last bIqKEx"
          data-index={0}
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            fill="rgba(38, 38, 38, 0.6)"
            height={22}
            viewBox="0 0 5 21"
            width={5.5}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--expanded hkONOE"
    />
  </div>
</div>
`;

exports[`<ListRow /> renders List Row with variant withLink correctly 1`] = `
<div
  className="ixeVCK"
  onClick={[Function]}
  onModalClose={[Function]}
  onRowCollapse={[Function]}
>
  <div
    className="row__wrapper row__wrapper--collapsed bdAxFg"
    onCloseRequest={[Function]}
  >
    <div
      className="list__container chItLs"
    >
      <button
        aria-expanded={false}
        aria-label="Expand Row"
        className="button--expand-or-collapse button--collapsed jxGugM"
        data-index={0}
        onClick={[Function]}
        role="button"
        size={45}
        type="button"
      >
        <svg
          fill="#1f262d"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="See Tickets"
        className="link__wrapper bMtiBb"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="date__wrapper dIzoqV"
        >
          <div
            className="text text--dark text--primary date--text cJvdYQ"
            disabled={false}
            size={
              Object {
                "large": "kilo",
                "medium": "kilo",
                "small": "hecto",
              }
            }
          >
            apr 23
          </div>
          <div
            className="text text--dark text--secondary day-time--text jjEscd kzWFvt"
            disabled={false}
            size={
              Object {
                "large": "hecto",
                "medium": "hecto",
                "small": "hecto",
              }
            }
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="row__content jliziJ"
        >
          <div
            className="column__mobile-only hwQSiY"
          >
            <div
              className="text text--dark text--primary list-row--title bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="text text--dark text--secondary list-row--subtitle jjEscd kzWFvt"
              disabled={false}
              size={
                Object {
                  "large": "hecto",
                  "medium": "hecto",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row--title column__content--collapsed iRwVbZ"
          >
            <div
              className="text text--dark text--primary bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="column__content iRwVbZ"
          >
            <div
              className="text text--dark text--primary subtitle list-row--subtitle subtitle--active subtitle--collapsed bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
            <div
              className="text text--dark text--primary subtitle subtitle--expanded subtitle--hidden bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
        </div>
        <div
          className="khBeGP"
        >
          <span
            aria-label="See Tickets"
            className="TAvlk"
            role="button"
            size="regular"
            width="102px"
          >
            See Tickets
          </span>
          <div
            className="dFpiHg"
          >
            <div
              className="text text--dark text--secondary jjEscd foyaPB"
              disabled={false}
              size={
                Object {
                  "large": "uno",
                  "medium": "uno",
                  "small": "uno",
                }
              }
            >
              click here
            </div>
          </div>
        </div>
      </a>
      <div
        className="fPfNCK"
      >
        <button
          aria-label="More Info"
          className="button--more-info icon-button--last bIqKEx"
          data-index={0}
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            fill="rgba(38, 38, 38, 0.6)"
            height={22}
            viewBox="0 0 5 21"
            width={5.5}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="gSJHix"
    >
      <div
        className="jMKHiO"
      >
        <button
          className="link--row-options jVlmkc gJYhwf"
          data-index={0}
          href={null}
          onClick={[Function]}
          rel="_self"
          size={
            Object {
              "large": "hecto",
              "medium": "hecto",
              "small": "hecto",
            }
          }
          target=""
        >
          Ticket options available
        </button>
        <a
          className="yTzPP fleKMb"
          data-index={0}
          href="/"
          onClick={null}
          rel="_self"
          size={
            Object {
              "large": "hecto",
              "medium": "hecto",
              "small": "hecto",
            }
          }
          target=""
        >
          Ticket options available
        </a>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--collapsed hkONOE"
    />
  </div>
</div>
`;

exports[`<ListRow /> renders standard List Row correctly 1`] = `
<div
  className="ixeVCK"
  onClick={[Function]}
  onModalClose={[Function]}
  onRowCollapse={[Function]}
>
  <div
    className="row__wrapper row__wrapper--collapsed bdAxFg"
    onCloseRequest={[Function]}
  >
    <div
      className="list__container eFAfGr"
    >
      <button
        aria-expanded={false}
        aria-label="Expand Row"
        className="button--expand-or-collapse button--collapsed jxGugM"
        data-index={0}
        onClick={[Function]}
        role="button"
        size={45}
        type="button"
      >
        <svg
          fill="#1f262d"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="See Tickets"
        className="link__wrapper bMtiBb"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="date__wrapper dIzoqV"
        >
          <div
            className="text text--dark text--primary date--text cJvdYQ"
            disabled={false}
            size={
              Object {
                "large": "kilo",
                "medium": "kilo",
                "small": "hecto",
              }
            }
          >
            apr 23
          </div>
          <div
            className="text text--dark text--secondary day-time--text jjEscd kzWFvt"
            disabled={false}
            size={
              Object {
                "large": "hecto",
                "medium": "hecto",
                "small": "hecto",
              }
            }
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="row__content jliziJ"
        >
          <div
            className="column__mobile-only hwQSiY"
          >
            <div
              className="text text--dark text--primary list-row--title bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="text text--dark text--secondary list-row--subtitle jjEscd kzWFvt"
              disabled={false}
              size={
                Object {
                  "large": "hecto",
                  "medium": "hecto",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row--title column__content--collapsed iRwVbZ"
          >
            <div
              className="text text--dark text--primary bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="column__content iRwVbZ"
          >
            <div
              className="text text--dark text--primary subtitle list-row--subtitle subtitle--active subtitle--collapsed bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
            <div
              className="text text--dark text--primary subtitle subtitle--expanded subtitle--hidden bgACjR fOakIH"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
        </div>
        <div
          className="khBeGP"
        >
          <span
            aria-label="See Tickets"
            className="TAvlk"
            role="button"
            size="regular"
            width="102px"
          >
            See Tickets
          </span>
        </div>
      </a>
      <div
        className="fPfNCK"
      >
        <button
          aria-label="More Info"
          className="button--more-info icon-button--last bIqKEx"
          data-index={0}
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            fill="rgba(38, 38, 38, 0.6)"
            height={22}
            viewBox="0 0 5 21"
            width={5.5}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--collapsed hkONOE"
    />
  </div>
</div>
`;
